# photobatch

./: CMakeLists.txt  compile_run.bat  test.bat
src/: ArgumentParser.cpp  ArgumentParser.h  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  PhotoBatch.cpp  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h
tests/: CMakeLists.txt  TestArgumentParser.cpp
